# meat.py

./: README.md  pyproject.toml
meat_py/: __init__.py  main.py  meat.py
